<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.masterho.madho_one.Act2">

    <AutoCompleteTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/acEditText"
        android:id="@+id/acText"
        android:layout_marginTop="15dp"
        android:completionThreshold="2"/>

    <MultiAutoCompleteTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/macEditText"
        android:id="@+id/macText1"
        android:layout_below="@+id/acText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:completionThreshold="2"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textGender"
        android:textSize="16sp"
        android:id="@+id/textGender"
        android:layout_below="@id/macText1"
        android:layout_marginTop="10dp" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textGender"
        android:id="@+id/selectGender"
        android:orientation="horizontal">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genderMale"
            android:id="@+id/genderMale"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_marginEnd="25dp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genderFemale"
            android:id="@+id/genderFemale"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="25dp"/>
    </RadioGroup>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirmText"
        android:id="@+id/cbConfirm"
        android:layout_below="@+id/selectGender"
        android:layout_marginTop="10dp"
        android:visibility="invisible"/>

    <ToggleButton
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:id="@+id/tBtn1"
        android:layout_below="@+id/cbConfirm"
        android:layout_centerHorizontal="true"
        android:textOff="@string/tBtnOff"
        android:textOn="@string/tBtnOn"
        android:visibility="invisible"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imgJKL"
        android:layout_centerHorizontal="true"
        android:src="@drawable/demo1"
        android:layout_below="@id/tBtn1"
        android:visibility="invisible"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnChange1"
        android:id="@+id/btnChange1"
        android:layout_below="@+id/imgJKL"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnChange2"
        android:id="@+id/btnChange2"
        android:layout_below="@+id/btnChange1"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnBack"
        android:id="@+id/act2BtnBack"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
