<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.masterho.madho_one.Act3">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:text=""
        android:id="@+id/CalMonitor"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="#24830c"
        android:textColor="#000000"
        android:textSize="50sp"
        android:gravity="end|center"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/CalMonitor"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp">
            <Button
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:text="@string/btnDel"
                android:id="@+id/btnDel"
                android:textSize="22sp"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="3dp"/>

            <Button
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:text="@string/btnClear"
                android:id="@+id/btnClear"
                android:textSize="22sp"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/btnDel"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp"/>

            <Button
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:text="@string/btnExc"
                android:id="@+id/btnExc"
                android:textSize="22sp"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/btnClear"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp"/>

            <Button
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:text="@string/btnMult"
                android:id="@+id/btnMult"
                android:textSize="22sp"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/btnExc"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="5dp"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:text="@string/btnNum7"
                android:id="@+id/btnNum7"
                android:textSize="22sp"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="3dp"/>

            <Button
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:text="@string/btnNum8"
                android:id="@+id/btnNum8"
                android:textSize="22sp"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/btnNum7"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp"/>

            <Button
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:text="@string/btnNum9"
                android:id="@+id/btnNum9"
                android:textSize="22sp"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/btnNum8"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp"/>

            <Button
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:text="@string/btnLess"
                android:id="@+id/btnLess"
                android:textSize="22sp"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/btnNum9"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="5dp"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:text="@string/btnNum4"
                android:id="@+id/btnNum4"
                android:textSize="22sp"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="3dp"/>

            <Button
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:text="@string/btnNum5"
                android:id="@+id/btnNum5"
                android:textSize="22sp"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/btnNum4"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp"/>

            <Button
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:text="@string/btnNum6"
                android:id="@+id/btnNum6"
                android:textSize="22sp"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/btnNum5"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp"/>

            <Button
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:text="@string/btnAdd"
                android:id="@+id/btnAdd"
                android:textSize="22sp"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/btnNum6"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="5dp"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/relativeLayout">
                <Button
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:text="@string/btnNum1"
                    android:id="@+id/btnNum1"
                    android:textSize="22sp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="3dp"/>

                <Button
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:text="@string/btnNum2"
                    android:id="@+id/btnNum2"
                    android:textSize="22sp"
                    android:layout_alignParentTop="true"
                    android:layout_toEndOf="@+id/btnNum1"
                    android:layout_marginStart="3dp"
                    android:layout_marginEnd="3dp"/>

                <Button
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:text="@string/btnNum3"
                    android:id="@+id/btnNum3"
                    android:textSize="22sp"
                    android:layout_alignParentTop="true"
                    android:layout_toEndOf="@+id/btnNum2"
                    android:layout_marginStart="3dp"
                    android:layout_marginEnd="3dp"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/relativeLayout"
                android:id="@+id/relativeLayout2">
                <Button
                    android:layout_width="80dp"
                    android:layout_height="160dp"
                    android:text="@string/btnEq"
                    android:id="@+id/btnEq"
                    android:textSize="22sp"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="3dp"
                    android:layout_marginEnd="5dp"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/relativeLayout"
                android:layout_toStartOf="@+id/relativeLayout2"
                android:layout_alignStart="@id/relativeLayout">
                <Button
                    android:layout_width="168dp"
                    android:layout_height="80dp"
                    android:text="@string/btnNum0"
                    android:id="@+id/btnNum0"
                    android:textSize="22sp"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="3dp"/>
                <Button
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:text="@string/btnDot"
                    android:id="@+id/btnDot"
                    android:textSize="22sp"
                    android:layout_alignParentTop="true"
                    android:layout_toEndOf="@+id/btnNum0"
                    android:layout_marginStart="3dp"
                    android:layout_marginEnd="5dp"/>
            </RelativeLayout>
        </RelativeLayout>


    </LinearLayout>
</RelativeLayout>
