<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.masterho.madho_one.ActFirst">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/startText"
        android:id="@+id/startText"
        android:layout_marginTop="22dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="16sp"/>

    <Button
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:text="@string/btnAct1"
        android:id="@+id/btnAct1"
        android:layout_marginTop="85dp"
        android:layout_below="@+id/startText"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:text="@string/btnAct2"
        android:id="@+id/btnAct2"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/btnAct1"
        android:layout_alignStart="@+id/btnAct1" />

    <Button
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:text="@string/btnAct3"
        android:id="@+id/btnAct3"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/btnAct2"
        android:layout_alignStart="@+id/btnAct1" />
</RelativeLayout>
